Improve the description of tag '-insecure' in section 'go get'.

--- a/0.3.md
+++ b/0.3.md
@@ -127,7 +127,7 @@ _表0-4 ```go get```命令的特有标记说明_
 -d        | 让命令程序只执行下载动作，而不执行安装动作。
 -f        | 仅在使用`-u`标记时才有效。该标记会让命令程序忽略掉对已下载代码包的导入路径的检查。如果下载并安装的代码包所属的项目是你从别人那里Fork过来的，那么这样做就尤为重要了。
 -fix      | 让命令程序在下载代码包后先执行修正动作，而后再进行编译和安装。
--insecure | 允许命令程序使用非安全的scheme（如HTTP）去下载指定的代码包。这个标记要小心使用，它会产生安全隐患。
+-insecure | 允许命令程序使用非安全的scheme（如HTTP）去下载指定的代码包。如果你用的代码仓库（如公司内部的Gitlab）没有HTTPS支持，可以添加此标记。请在确定安全的情况下使用它。
 -t        | 让命令程序同时下载并安装指定的代码包中的测试源码文件中依赖的代码包。
 -u        | 让命令利用网络来更新已有代码包及其依赖包。默认情况下，该命令只会从网络上下载本地不存在的代码包，而不会更新已有的代码包。
 
