Improve section 0.5 for go1.5.

--- a/0.4.md
+++ b/0.4.md
@@ -15,7 +15,7 @@
 
 我们再以goc2p项目的`logging`为例。为了能够反复体现每个标记的作用，我们会使用标记`n`。使用标记`-n`会让命令在执行过程中打印用到的系统命令，但不会真正执行它们。如果想既打印命令又执行命令则需使用标记`-x`。现在我们来试用一下`go clean`命令：
 
-```go
+```bash
 hc@ubt:~/golang/goc2p/src$ go clean -x logging   
 cd /home/hc/golang/goc2p/src/logging
 rm -f logging logging.exe logging.test logging.test.exe
@@ -23,7 +23,7 @@ rm -f logging logging.exe logging.test logging.test.exe
 	
 现在，我们加上标记`-i`：
 
-```go
+```bash
 hc@ubt:~/golang/goc2p/src$ go clean -x -i logging   
 cd /home/hc/golang/goc2p/src/logging
 rm -f logging logging.exe logging.test logging.test.exe
