Update 'go test' section for go1.5.

--- a/0.6.md
+++ b/0.6.md
@@ -1,12 +1,14 @@
 # go run
 
+
+
 在《Go并发编程实战》的第二章中，我介绍了Go源码文件的分类。Go源码文件包括：命令源码文件、库源码文件和测试源码文件。其中，命令源码文件总应该属于`main`代码包，且在其中有无参数声明、无结果声明的main函数。单个命令源码文件可以被单独编译，也可以被单独安装（可能需要设置环境变量GOBIN）。当然，命令源码文件也可以被单独运行。我们想要运行命令源码文件就需要使用命令`go run`。
 
 `go run`命令可以编译并运行命令源码文件。由于它其中包含了编译动作，因此它也可以接受所有可用于`go build`命令的标记。除了标记之外，`go run`命令只接受Go源码文件作为参数，而不接受代码包。与`go build`命令和`go install`命令一样，`go run`命令也不允许多个命令源码文件作为参数，即使它们在同一个代码包中也是如此。而原因也是一致的，多个命令源码文件会都有main函数声明。
 
 如果命令源码文件可以接受参数，那么在使用`go run`命令运行它的时候就可以把它的参数放在它的文件名后面，像这样：
 
-```go
+```bash
 hc@ubt:~/golang/goc2p/src/helper/ds$ go run showds.go -p ~/golang/goc2p
 ```
 	
@@ -20,7 +22,7 @@ hc@ubt:~/golang/goc2p/src/helper/ds$ go run showds.go -p ~/golang/goc2p
 
 为了更直观的体现出`go run`命令中的操作步骤，我们在执行命令时加入标记`-n`，用于打印相关命令而不实际执行。现在让我们来模拟运行goc2p项目中的代码包helper/ds的命令源码文件showds.go。示例如下：
 
-```go
+```bash
 hc@ubt:~/golang/goc2p/src/helper/ds$ go run -n showds.go
 
 #
@@ -52,7 +54,7 @@ $WORK/command-line-arguments/_obj/exe/showds
 
 在上面的示例中，我们只是让`go run`命令打印出运行命令源码文件showds.go过程中需要执行的命令，而没有真正运行它。如果我们想真正运行命令源码文件showds.go并且想知道临时工作目录的位置，就需要去掉标记`-n`并且加上标记`-work`。当然，如果依然想看到过程中执行的命令，可以加上标记`-x`。如果读者已经看过之前我们对`go build`命令的介绍，就应该知道标记`-x`与标记`-n`一样会打印出过程执行的命令，但不同的这些命令会被真正的执行。调整这些标记之后的命令就像这样：
 
-```go
+```bash
 hc@ubt:~/golang/goc2p/src/helper/ds$ go run -x -work showds.go
 ```
 	
@@ -69,19 +71,21 @@ hc@ubt:~/golang/goc2p/src/helper/ds$ go run -x -work showds.go
 	
 由于上述命令中包含了`-work`标记，所以我们可以从其输出中找到实际的工作目录（这里是/tmp/go-build604555989）。有意思的是，我们恰恰可以通过运行命令源码文件showds.go来查看这个临时工作目录的目录树：
 
-	hc@ubt:~/golang/goc2p/src/helper/ds$ go run showds.go -p /tmp/go-build604555989
+```bash
+hc@ubt:~/golang/goc2p/src/helper/ds$ go run showds.go -p /tmp/go-build604555989
+```
 	
 读者可以自己试一试。
 
 我们在前面介绍过，命令源码文件如果可以接受参数，则可以在执行`go run`命令运行这个命令源码文件时把参数名和参数值成对的追加在后面。实际上，如果在命令后追加参数，那么在最后执行生成的可执行文件的时候也会追加一致的参数。例如，如果这样执行命令：
 
-```go
+```bash
 hc@ubt:~/golang/goc2p/src/helper/ds$ go run -n showds.go -p ~/golang/goc2p
 ```
 
 那么带`-x`或`-n`标记的命令程序打印的最后一个命令就是：
 
-```go
+```bash
 $WORK/command-line-arguments/_obj/exe/showds -p /home/hc/golang/goc2p
 ```
 	
