--- a/0.5.md
+++ b/0.5.md
@@ -6,7 +6,7 @@
 
 **插播：**所谓Go语言的程序实体，是指变量、常量、函数、结构体以及接口。而程序实体的标识符即是代表它们的名称。标识符又分非限定标识符和限定标识符。其中，限定标识符一般用于表示某个代码包中的程序实体或者某个结构体类型中的方法或字段。例如，标准库代码包`io`中的名为`EOF`的变量用限定标识符表示即`io.EOF`。又例如，如果我有一个`sync.WaitGroup`类型的变量`wg`并且想调用它的`Add`方法，那么可以这样写`wg.Add()`。其中，`wg.Add`就是一个限定标识符，而后面的`()`则代表了调用操作。
 
-下面说明怎样使用`go doc`命令。先来看一下`go doc`命令课结束的标记。
+下面说明怎样使用`go doc`命令。先来看一下`go doc`命令可接受的标记。
 
 _表0-5 ```go doc```命令的标记说明_
 
